cambios en archivo css por movimiento de la imagen del Body

--- a/css/shop-homepage.css
+++ b/css/shop-homepage.css
@@ -2,8 +2,10 @@
 body {
     padding-top: 54px;
     background-image: url('../img/body.jpg');
+    /*
     animation: movimiento 40s infinite linear alternate;
     background-attachment: fixed;
+    */
 }
 
 @keyframes movimiento{
